--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            
          <div class="top">
            <div class="logo">
-             <h2>Salary <span class="danger">Tracking </span> </h2>
+             <h2>Salary <span class="danger">Tracker </span> </h2>
            </div>
            <div class="close" id="close_btn">
             <span class="material-symbols-sharp">
