--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
          <!-- end top -->
           <div class="sidebar">
 
-            <a href="#">
+            <a href="index.html">
               <span class="material-symbols-sharp">grid_view </span>
               <h3>Dashbord</h3>
            </a>
-           <a href="#" class="active">
+           <a href="account.html" class="active">
               <span class="material-symbols-sharp">person_outline </span>
               <h3>Account</h3>
            </a>
-           <a href="#">
-              <span class="material-symbols-sharp">insights </span>
-              <h3>Analytics</h3>
-           </a>
+           
            
            <a href="#">
               <span class="material-symbols-sharp">receipt_long </span>
@@ -47,10 +44,10 @@
               <h3>About us</h3>
            </a>
            <a href="#">
-              <span class="material-symbols-sharp">settings </span>
-              <h3>settings</h3>
-           </a>
-           <a href="#">
+            <span class="material-symbols-sharp">add </span>
+            <h3>Add Budget</h3>
+         </a>
+           <a href="add.html">
               <span class="material-symbols-sharp">add </span>
               <h3>Add expense</h3>
            </a>
